--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </i>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Was ist ein Giftköder?</a></li>
+                        <li><a href="index.html">Arten von Giftködern</a></li>
                         <li><a href="index.html">Karte</a></li>
                     </ul>
                 </div>
@@ -46,7 +46,7 @@
             <div class="textbox">
                 <h1>Giftköder Tracker</h1>
                 <p>
-                    Auf dieser Website findest du eine Map die dir alle gemeldeten Giftköder in einem Umkreis anzeigt.<br>
+                    Auf dieser Website findest du eine Karte die dir alle gemeldeten Giftköder in deinem Umkreis anzeigt.<br>
                     Zudem bietet sie dir die Möglichkeit selbst Giftköder der Community zu melden.
 
                 </p>
@@ -58,22 +58,33 @@
 
 
         <section class="giftköder">
-            <h1>Was ist ein Giftköder</h1>
-            <p>Lorem ipsum frbrrnvjrnvirvgnirgnvdng</p>
+            <h1>Arten von Giftködern</h1>
 
 
             <div class="row">
                 <div class="column">
-                    <h3>Arten von Giftködern</h3>
-                    <p>Lorem ipsum</p>
+                    <h3>Rattengift</h3>
+                    <p>Diese Gift wirkt sehr langsam und die Tiere haben zuerst nur sehr unscheinbare Symptome wie eine leichte Unruhe<br>
+                        Sollten sie den verdacht haben, dass ihr Vierbeiner dieses Gift gefressen hat sollten sie umgehend zu einem Tierarzt gehen, den dieses Gift führt zu einer 
+                        Störung der Blutgerinnung und somit zum inneren Verbluten.
+                    </p>
                 </div>
                 <div class="column">
-                    <h3>Was machen bei Verdacht</h3>
-                    <p>Lorem ipsum</p>
+                    <h3>Schneckenkorn</h3>
+                    <p>Schneckenkorn ist ein süßlich schmeckendes Pulver, welches dadruch für einen Hund sehr attraktiv ist.
+                        Es wird oft von Gärtnern und Hausmeistern benutzt und ist bei einer niedrigen Dosierung nicht gefährlich für einen Vierbeiner.
+                        Erst bei einer hohen Konzentration kann es schon nach 30-60 Minuten zum Tod führen.
+                        Die Vergiftung lässt sich vorallem durch Unruhe, Muskelzittern und Herzrasen feststellen.
+                    </p>
                 </div>
                 <div class="column">
-                    <h3>lorem ipsum</h3>
-                    <p>Lorem ipsum</p>
+                    <h3>Nägel, Rasierklingen & Reißzwecke</h3>
+                    <p>
+                        Einer der am Häufigsten verwendeten Köder mit direkter lebensgefährlicher Wirkung sind Nägel, Rasierklingen und Reißzwecke, welche dem Vierbeiner in 
+                        einem leckerne Fleischbällchen untergejubelt werden.
+                        Sollte dein Vierbeiner solch einen Köder runterschlucken, kann das zu schweren Verletzungen in der Speiseröhre, dem Darm oder dem Magen verursachen.
+                        Sie sollten direkt einen Arzt aufsuchen und auf keinen Fall den Hund zum kotzen bringen.
+                    </p>
                 </div>
             </div>
 
@@ -82,6 +93,7 @@
         <section class="map">
 
             <h1>Map</h1>
+            <button class="button" onclick="setMarker()">Giftköder an der aktuellen Position melden</button> 
             <div id="map"></div>
 
 
