--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                         </span>
                     </i>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">Arten von Giftködern</a></li>
-                        <li><a href="index.html">Karte</a></li>
+                        <li><a href="#link1">Home</a></li>
+                        <li><a href="#link2">Arten von Giftködern</a></li>
+                        <li><a href="#link3">Karte</a></li>
                     </ul>
                 </div>
                 <i id="icons">
@@ -44,7 +44,7 @@
                 </i>
             </nav>
             <div class="textbox">
-                <h1>Giftköder Tracker</h1>
+                <h1 id="link1">Giftköder Tracker</h1>
                 <p>
                     Auf dieser Website findest du eine Karte die dir alle gemeldeten Giftköder in deinem Umkreis anzeigt.<br>
                     Zudem bietet sie dir die Möglichkeit selbst Giftköder der Community zu melden.
@@ -58,7 +58,7 @@
 
 
         <section class="giftköder">
-            <h1>Arten von Giftködern</h1>
+            <h1 id="link2">Arten von Giftködern</h1>
 
 
             <div class="row">
@@ -92,7 +92,7 @@
 
         <section class="map">
 
-            <h1>Map</h1>
+            <h1 id="link3">Map</h1>
             <a>
                 <button class="button" onclick="setMarker()">Giftköder an der aktuellen Position melden</button> 
             </a>
