--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 const geometry = new THREE.BoxGeometry( 3, 3, 3 );
                 const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
                 const cube = new THREE.Mesh( geometry, material );
-                scene.add( cube );
+                //scene.add( cube );
 
                 const loader = new GLTFLoader();
 
