--- a/index.html
+++ b/index.html
@@ -112,7 +112,27 @@
                 const geometry = new THREE.BoxGeometry( 3, 3, 3 );
                 const material = new THREE.MeshBasicMaterial( { color: 0x00ff00 } );
                 const cube = new THREE.Mesh( geometry, material );
-                //scene.add( cube );
+                //scene.add( cube );#
+                hlight = new THREE.AmbientLight (0x404040,100);
+                scene.add(hlight);
+
+                directionalLight = new THREE.DirectionalLight(0xffffff,100);
+                directionalLight.position.set(0,1,0);
+                directionalLight.castShadow = true;
+                scene.add(directionalLight);
+                light = new THREE.PointLight(0xc4c4c4,10);
+                light.position.set(0,300,500);
+                scene.add(light);
+                light2 = new THREE.PointLight(0xc4c4c4,10);
+                light2.position.set(500,100,0);
+                scene.add(light2);
+                light3 = new THREE.PointLight(0xc4c4c4,10);
+                light3.position.set(0,100,-500);
+                scene.add(light3);
+                light4 = new THREE.PointLight(0xc4c4c4,10);
+                light4.position.set(-500,300,500);
+                scene.add(light4);
+
 
                 const loader = new GLTFLoader();
 
@@ -145,7 +165,7 @@
                 container.add( text );
 
                 // scene is a THREE.Scene (see three.js)
-                scene.add( container );
+                //scene.add( container );
 
 // This is typically done in the render loop :
                 ThreeMeshUI.update();
