--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             })
             .catch(console.error);
         } else {
-          alert("DeviceMotionEvent is not defined");
+          //alert("DeviceMotionEvent is not defined");
         }
       }
 
