--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
       function predict(features) {
         const prediction = score(features);
-        document.getElementById("debug1").innerHTML = score(features);
+        document.getElementById("debug1").innerHTML = round(score(features),3);
         if(prediction[0] >= 0.50){
           return "Walking"
         }
